fixed gap at bottom of jumbotron

--- a/css/app.css
+++ b/css/app.css
@@ -69,6 +69,7 @@ footer a:hover {
   border-radius: 12px;
   border-color: rgba(64, 115, 147, 1);  /* Wordpress blue */
   border-style: solid;
+  line-height: 0px;
 }
 
 .jumbotron {
@@ -364,7 +365,7 @@ footer a:hover {
     visibility: hidden;
     height: 0;
   }
-  
+
   #rotating-voronoi {
     visibility: hidden;
     height: 0;
